Update for Java 11
Signed-off-by: Simeon Widdis <sawiddis@amazon.com>